Finalizando a classe Handler