@@ -4,8 +4,7 @@ import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
+import java.nio.charset.StandardCharsets;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import java.net.URLEncoder;
@@ -20,13 +19,12 @@ public class Jira {
         this.auth = "Basic " + java.util.Base64.getEncoder().encodeToString((user + ":" + apiToken).getBytes());
     }
 
-    public String buscarUltimoChamadoAberto(String maquina, String tipo) throws Exception {
+    public String buscarUltimoChamadoAberto(String maquina) throws Exception {
 
-        String jql = String.format("maquina = \"%s\" AND tipo = \"%s\" AND status in ('In progress', 'To do') ORDER BY created DESC",
-                maquina,
-                tipo);
+        String jql = String.format("customfield_10088 = \"%s\" AND customfield_10089 = falta AND status in ('In progress', 'To do') ORDER BY created DESC",
+                maquina);
 
-        String url = baseUrl + "rest/api/2/search?jql=" + URLEncoder.encode(jql, "UTF-8") + "&maxResults=1&fields=id";
+        String url = baseUrl + "rest/api/2/search?jql=" + URLEncoder.encode(jql, StandardCharsets.UTF_8) + "&maxResults=1&fields=id";
 
         HttpRequest req = HttpRequest.newBuilder()
                 .uri(new URI(url))
@@ -48,21 +46,24 @@ public class Jira {
 
     public String criarChamado(String empresa, String maquina) throws Exception {
         String url = baseUrl + "rest/api/2/issue";
-        String dataAtual = LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm:ss"));
 
         String json = """
-        {
-            "fields": {
-                "project": {"key": "CHAMADO"},
-                "summary": "Ausência no envio.",
-                "description": "O caixa %s deixou de enviar as informações na data %s",
-                "tipo": "falta",
-                "empresa": "%s",
-                "maquina": "%s"
-            }
-        }
-        """.formatted(maquina, dataAtual,
-                empresa, maquina);
+                {
+                   "fields": {
+                     "project": {
+                       "key": "CHAMADO"
+                     },
+                     "summary": "Alerta: REDE | Sem envio",
+                     "issuetype": {
+                       "name": "Task"
+                     },
+                     "description": "ID ATM: %s",
+                     "customfield_10089": "falta",
+                     "customfield_10087": "%s",
+                     "customfield_10088": "%s"
+                   }
+                 }
+    """.formatted(maquina, empresa, maquina);
 
         HttpRequest req = HttpRequest.newBuilder()
                 .uri(new URI(url))
@@ -74,8 +75,9 @@ public class Jira {
     }
 
 
+
     public String encerrarChamado(String issueKey) throws Exception {
-        String transitionId = "";
+        String transitionId = "61";
         String url = baseUrl + "rest/api/2/issue/" + issueKey + "/transitions";
         String json = """
             {
